Fix form register, login on small device

--- a/static/sass/_responsive-mobile-medium-max.scss
+++ b/static/sass/_responsive-mobile-medium-max.scss
@@ -15,6 +15,20 @@
       }
     }
 
-    
+    .content-wrapper section.container {
+      &.login , &.register {
+        section.content {
+          float: none;
+          width:100%;
+        }
+        aside {
+          float: none;
+          width: 100%;
+        }
+      }
+
+
+    }
+
   }
 }
